--- a/app/src/main/res/layout/fragment_personalcenter.xml
+++ b/app/src/main/res/layout/fragment_personalcenter.xml
@@ -27,7 +27,7 @@
                 android:gravity="center_horizontal"
                 android:paddingBottom="7dp"
                 android:paddingTop="10dp"
-                android:text="个人信息"
+                android:text="个人中心"
                 android:textColor="#ffffff"
                 android:textSize="14sp" />
         </RelativeLayout>
