--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -130,7 +130,7 @@
             <TextView
                 android:id="@+id/jpush_content"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="1dp"
                 android:layout_toRightOf="@id/user_newpwd"
